<resources>
    <string name="app_name">H3 Hearing Test</string>
    <string name="action_settings">Settings</string>
    <string name="left_ear">Left Ear</string>
    <string name="right_ear">Right Ear</string>
    <string name="frequency">Frequency</string>
    <string name="pressure">Pressure</string>
    <string name="do_you_hear_the_tone">Do you hear the tone?</string>
    <string name="i_don_t">I don\'t</string>
    <string name="support">Support Us</string>
    <string name="i_hear">I hear</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="age">Age</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="medical_history">Medical History</string>
    <string name="gain_factor">Gain Factor</string>

    <string name="save_result">Save Result</string>
    <string name="user_info">User Info</string>
    <string name="next">Next</string>
    <string name="hearing_test">Hearing Test</string>
    <string name="go_to_test">Go to Test</string>
    <string name="plug_your_headphones">Plug your Headphones</string>
</resources>
