<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <androidx.core.widget.NestedScrollView
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="8dp"
                android:fontFamily="sans-serif-medium"
                android:text="@string/user_info"
                android:textColor="@color/primary_text_color"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/title">

                <com.icanhear.icanhear.views.InputView
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <com.icanhear.icanhear.views.InputView
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <com.icanhear.icanhear.views.InputView
                    android:id="@+id/age"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <com.icanhear.icanhear.views.InputView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <com.icanhear.icanhear.views.InputView
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <com.icanhear.icanhear.views.InputView
                    android:id="@+id/history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="16dp" />

                <com.icanhear.icanhear.views.InputView
                    android:id="@+id/gainFactor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible"
                    />

            </LinearLayout>




            <RelativeLayout
                android:id="@+id/support"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="10dp"
                app:layout_constraintVertical_weight="2"
                android:gravity="center_horizontal"
                android:visibility="visible"
                android:paddingStart="32dp"
                android:paddingEnd="32dp"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/next"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"

                    android:elevation="8dp"

                    android:soundEffectsEnabled="false"
                    android:text="@string/next"
                    android:textAllCaps="true"
                    android:visibility="visible"
                    app:cornerRadius="16dp"
                   />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/supportUs"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:elevation="6dp"
                    android:paddingStart="32dp"
                    android:paddingEnd="32dp"
                    android:soundEffectsEnabled="false"
                    android:text="@string/support"
                    android:textAllCaps="true"
                    app:backgroundTint="@color/colorPrimary"
                    android:layout_below="@+id/next"
                    app:cornerRadius="16dp" />


            </RelativeLayout>



        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>